Fixed row on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -33,7 +33,7 @@ main { position: relative; flex: 1 1 auto; }
 
 @media(max-width: 991px) {
   .grid-row { grid-template-columns: 1fr 1fr 1fr; }
-  .row { flex-direction: column-reverse; }
+  .players-outer-container { flex-direction: column-reverse; }
   .discord-container { width: 100%; }
   .players-container { width: 100%; }
 }
